@@ -23,6 +23,9 @@ genes by doing something like this:  SELECT * FROM so.gene WHERE name='foo'.
 See http://gmod.org/Chado_SO_Views for more information.
 * Added a protein_code_gene view (depends on so-bridge); thanks to Chris
 Mungall.
+* Updated all_feature_names view to search featureprop.value and
+dbxref.accession.
+
 
 
 
